// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spartacus Contentful schematics: ng-add Contentful feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { provideConfig } from "@spartacus/core";
import { ContentfulModule } from "@spartacus/contentful";
import { ContentfulConfig, ContentfulRootModule } from "@spartacus/contentful/root";

@NgModule({
  declarations: [],
  imports: [
    ContentfulRootModule,
    ContentfulModule
  ],
  providers: [provideConfig(<ContentfulConfig>{
    contentful: {
      storefrontPreviewRoute: 'STOREFRONT_PREVIEW_ROUTE_PLACEHOLDER',
      allowOrigin: 'ALLOWED_ORIGIN_PLACEHOLDER',
    },
  })]
})
export class ContentfulFeatureModule { }
"
`;

exports[`Spartacus Contentful schematics: ng-add Contentful feature general setup assets should update angular.json 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "",
  "projects": {
    "schematics-test": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss",
          "standalone": false
        },
        "@schematics/angular:directive": {
          "standalone": false
        },
        "@schematics/angular:pipe": {
          "standalone": false
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular-devkit/build-angular:application",
          "options": {
            "outputPath": "dist/schematics-test",
            "index": "src/index.html",
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              "src/favicon.ico",
              "src/assets",
              {
                "glob": "**/*",
                "input": "./node_modules/@spartacus/contentful/assets",
                "output": "assets/"
              }
            ],
            "styles": [
              "src/styles.scss"
            ],
            "scripts": [],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            }
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kb",
                  "maximumError": "3.5mb"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "2kb",
                  "maximumError": "4kb"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular-devkit/build-angular:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "schematics-test:build:production"
            },
            "development": {
              "buildTarget": "schematics-test:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "extract-i18n": {
          "builder": "@angular-devkit/build-angular:extract-i18n",
          "options": {
            "buildTarget": "schematics-test:build"
          }
        },
        "test": {
          "builder": "@angular-devkit/build-angular:karma",
          "options": {
            "polyfills": [
              "zone.js",
              "zone.js/testing"
            ],
            "tsConfig": "tsconfig.spec.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              "src/favicon.ico",
              "src/assets",
              {
                "glob": "**/*",
                "input": "./node_modules/@spartacus/contentful/assets",
                "output": "assets/"
              }
            ],
            "styles": [
              "src/styles.scss"
            ],
            "scripts": [],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            }
          }
        }
      }
    }
  }
}"
`;

exports[`Spartacus Contentful schematics: ng-add Contentful feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, provideConfig } from "@spartacus/core";
import { CONTENTFUL_FEATURE, ContentfulConfig, ContentfulRootModule } from "@spartacus/contentful/root";

@NgModule({
  declarations: [],
  imports: [
    ContentfulRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CONTENTFUL_FEATURE]: {
        module: () =>
          import('@spartacus/contentful').then((m) => m.ContentfulModule),
      },
    }
  }),
  provideConfig(<ContentfulConfig>{
    contentful: {
      storefrontPreviewRoute: 'STOREFRONT_PREVIEW_ROUTE_PLACEHOLDER',
      allowOrigin: 'ALLOWED_ORIGIN_PLACEHOLDER',
    },
  })
  ]
})
export class ContentfulFeatureModule { }
"
`;

exports[`Spartacus Contentful schematics: ng-add Contentful feature with allowOrigin config should configure the allowOrigin 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, provideConfig } from "@spartacus/core";
import { CONTENTFUL_FEATURE, ContentfulConfig, ContentfulRootModule } from "@spartacus/contentful/root";

@NgModule({
  declarations: [],
  imports: [
    ContentfulRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CONTENTFUL_FEATURE]: {
        module: () =>
          import('@spartacus/contentful').then((m) => m.ContentfulModule),
      },
    }
  }),
  provideConfig(<ContentfulConfig>{
    contentful: {
      storefrontPreviewRoute: 'STOREFRONT_PREVIEW_ROUTE_PLACEHOLDER',
      allowOrigin: 'localhost:9002',
    },
  })
  ]
})
export class ContentfulFeatureModule { }
"
`;

exports[`Spartacus Contentful schematics: ng-add Contentful feature with storefrontPreviewRoute config should configure the storefrontPreviewRoute 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, provideConfig } from "@spartacus/core";
import { CONTENTFUL_FEATURE, ContentfulConfig, ContentfulRootModule } from "@spartacus/contentful/root";

@NgModule({
  declarations: [],
  imports: [
    ContentfulRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CONTENTFUL_FEATURE]: {
        module: () =>
          import('@spartacus/contentful').then((m) => m.ContentfulModule),
      },
    }
  }),
  provideConfig(<ContentfulConfig>{
    contentful: {
      storefrontPreviewRoute: 'cx-preview',
      allowOrigin: 'ALLOWED_ORIGIN_PLACEHOLDER',
    },
  })
  ]
})
export class ContentfulFeatureModule { }
"
`;
